[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/interfaces/combo/gray-progress-star.png" type="Texture" id=1]
[ext_resource path="res://assets/interfaces/combo/red-progress-star.png" type="Texture" id=2]
[ext_resource path="res://interface/CircularProgressStar.gd" type="Script" id=3]
[ext_resource path="res://assets/interfaces/command-input/X.png" type="Texture" id=4]
[ext_resource path="res://assets/interfaces/command-input/Y.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/command-input/B.png" type="Texture" id=6]
[ext_resource path="res://assets/interfaces/combo/small-star.png" type="Texture" id=7]

[sub_resource type="Gradient" id=69]
offsets = PoolRealArray( 0, 0.00327869, 0.193443, 0.685246, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.898438, 0.898438, 0.898438, 1, 0.746094, 0.746094, 0.746094, 1, 0.804688, 0.804688, 0.804688, 0.509804, 0.785156, 0.785156, 0.785156, 0.0392157 )

[sub_resource type="GradientTexture" id=70]
gradient = SubResource( 69 )

[sub_resource type="ParticlesMaterial" id=71]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
angular_velocity = 28.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
damping = 22.0
angle = 45.0
angle_random = 1.0
color_ramp = SubResource( 70 )

[node name="CircularProgressStar" type="TextureProgress"]
margin_right = 40.0
margin_bottom = 40.0
value = 66.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
fill_mode = 4
script = ExtResource( 3 )
firstButtonTexture = ExtResource( 4 )
secondButtonTexture = ExtResource( 5 )
thirdButtonTexture = ExtResource( 6 )

[node name="TextureRect_X" type="TextureRect" parent="."]
margin_left = 58.0
margin_top = 14.0
margin_right = 143.0
margin_bottom = 61.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="TextureRect_X_transparent" type="TextureRect" parent="."]
visible = false
margin_left = 58.0
margin_top = 14.0
margin_right = 143.0
margin_bottom = 61.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="TextureRect_Y" type="TextureRect" parent="."]
margin_left = 31.0
margin_top = 89.0
margin_right = 116.0
margin_bottom = 136.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="TextureRect_Y_transparent" type="TextureRect" parent="."]
visible = false
margin_left = 31.0
margin_top = 89.0
margin_right = 116.0
margin_bottom = 136.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="TextureRect_B" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 14.0
margin_right = 90.0
margin_bottom = 61.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="TextureRect_B_transparent" type="TextureRect" parent="."]
visible = false
margin_left = 5.0
margin_top = 14.0
margin_right = 90.0
margin_bottom = 61.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 60, 60 )
scale = Vector2( 6, 6 )
emitting = false
amount = 20
lifetime = 1.6
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
process_material = SubResource( 71 )
texture = ExtResource( 7 )
